# python-project-lvl3

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
page_loader/: creators.py  logger.py  logging.py  network.py  page_loader.py  requestor.py
page_loader/scripts/: page_loader.py
tests/: page_loader_test.py  pytest_test.py
tests/fixtures/: output.html  output_html.html
