[tool.poetry]
name = "pavelgoshurenko-page-loader"
version = "0.4.0"
description = "Download web pages and save them locally"
authors = ["Pavel Goshurenko <goshurenkopl@gmail.com>"]
repository = "https://github.com/PavelGoshurenko/python-project-lvl3"


packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.4.1"
pylint = "^2.4.4"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
